k8s/haproxy/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: default
  annotations:
    haproxy.org/load-balance: "leastconn"
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lobby-server-service
                port:
                  number: 3001
    - http:
        paths:
          - path: /lobby-service
            pathType: Prefix
            backend:
              service:
                name: lobby-server-service
                port:
                  number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-socket-ingress
  namespace: default
  annotations:
    haproxy.org/ssl-redirect: "false"
    haproxy.org/timeout-tunnel: "3600s"
    haproxy.org/load-balance: "leastconn"
    haproxy.org/cookie-persistence: "io"
    haproxy.org/check: "true"
    haproxy.org/check-http: "/health"
    haproxy.org/forwarded-for: "true"
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: game-server-service
                port:
                  number: 3003
